# unity-sps-ogc-processes-api

./: .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  openapi-generator-config.yaml  pyproject.toml
.github/workflows/: build_docker_images.yml  static_analysis.yml  unit_tests.yml
app/: README.md  config.py  cwl_arbitrary_dag.py  main.py  openapi.yaml  pyproject.toml  test_main.py
app-cp/: docker-compose.yaml  main.py  pyproject.toml  setup.cfg
app-cp/database/: __init__.py  crud.py
app-cp/src/openapi_server/: api_api.py
app-cp/src/openapi_server/database/: __init__.py  crud.py  models.py
app-cp/src/openapi_server/impl/: api_api.py  conformance_api.py  dru_api.py  jobs_api.py  landing_page_api.py  processes_api.py
app-cp/src/openapi_server/utils/: redis.py
app-cp/src/unity_sps_ogc_processes_api/: main.py  security_api.py
app-cp/src/unity_sps_ogc_processes_api/apis/: api_api.py  api_api_base.py  conformance_api.py  conformance_api_base.py  dru_api.py  dru_api_base.py  jobs_api.py  jobs_api_base.py  landing_page_api.py  landing_page_api_base.py  processes_api.py  processes_api_base.py
app-cp/src/unity_sps_ogc_processes_api/models/: bbox_processes.py  conf_classes.py  crs.py  description_type.py  exception.py  execute200_response.py  execute200_response1.py  execution_unit_config.py  extent_temporal_grid_resolution.py  fields_modifiers_properties.py  format.py  inline_or_ref_data.py  input.py  input_description.py  input_workflows.py  job_list.py  metadata.py  model_schema.py  ogcapppkg.py  ogcapppkg_execution_unit.py  output_description.py  qualified_input_value.py  qualified_input_value1.py  qualified_input_value_workflows.py  schema1.py  schema_one_of.py
app-cp/tests/: conftest.py  test_dru_api.py
app/.openapi-generator/: FILES
app/database/: __init__.py  crud.py  models.py
app/models/: ogc_processes.py
app/schemas/: ogc_processes.py
app/src/openapi_server/config/: config.py
app/src/openapi_server/database/: crud.py  models.py
app/src/openapi_server/impl/: api_api.py  dru_api.py  health_api.py  jobs_api.py  landing_page_api.py  processes_api.py
app/src/unity_sps_ogc_processes_api/: dependencies.py  main.py  security_api.py
app/src/unity_sps_ogc_processes_api/apis/: api_api.py  api_api_base.py  conformance_api.py  conformance_api_base.py  dru_api.py  dru_api_base.py  health_api.py  health_api_base.py  jobs_api.py  jobs_api_base.py  landing_page_api.py  landing_page_api_base.py  processes_api.py  processes_api_base.py
app/src/unity_sps_ogc_processes_api/models/: bbox.py  bbox1.py  bbox_def_crs.py  bbox_processes.py  collection_info.py  collection_info_data_type.py  collections.py  crs.py  crs_one_of.py  crs_one_of_one_of.py  crs_one_of_one_of1.py  crs_one_of_one_of2.py  data_type.py  description_type.py  enumeration.py  execute.py  execute200_response.py  execute200_response1.py  execute_workflows.py  execute_workflows1.py  execution_unit.py  extent.py  extent_spatial.py  extent_spatial_grid_inner.py  extent_spatial_grid_inner_coordinates_inner.py  extent_spatial_grid_inner_resolution.py  extent_temporal.py  extent_temporal_grid.py  extent_temporal_grid_resolution.py  extent_uad.py  feature_collection.py  fields_modifiers.py  fields_modifiers_properties.py  format.py  format_schema.py  geo_json_feature.py  geo_json_feature_geometry.py  geo_json_feature_id.py  geo_json_line_string.py  geo_json_multi_line_string.py  (+53 more)
app/tests/: conftest.py  echoProcess.json  test_api_api.py  test_conformance_api.py  test_dru_api.py  test_jobs_api.py  test_landing_page_api.py  test_processes_api.py
process_descriptions/: cwltool_help_dag.json
unity-test/: conftest.py  sql_app.db  test_dru_api.py  test_main.py  test_processes_api.py
unity-test/test_data/execution_requests/: EchoProcess.json  cwl_dag.json  cwl_dag_request.json
unity-test/test_data/process_descriptions/: EchoProcess.json  cwl_dag.json  cwl_dag_process.json
