[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "unity-sps-ogc-processes-api"
version = "0.0.1-beta.1"
authors = [
    { name = "Drew Meyers", email = "drew.meyers@jpl.nasa.gov" },
]
description = "The Unity science processing service area's OGC Processes API."
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]

dependencies = [
    "requests==2.31.0",
    "fastapi==0.110.0",
    "pydantic==2.6.4",
    "SQLAlchemy==2.0.28",
    "pydantic-settings==2.0.0",
    "uvicorn==0.27.1",
    "psycopg2==2.9.9"
]

[project.license]
text = "Apache-2.0"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/unity-sds/unity-sps-ogc-processes-api"

[project.optional-dependencies]
develop = [
    "datamodel-code-generator==0.25.5"
]
test = [
    "pytest==8.0.2",
    "pytest-dependency==0.6.0",
    "httpx==0.23.0",
    "requests-mock==1.12.1",
    "pyfakefs==5.4.1"
]
experiment = []

[tool.setuptools.packages.find]
exclude = ["tests*"]
namespaces = false

[tool.isort]
line_length = 110

[tool.black]
line-length = 110

[tool.ruff]
line-length = 110

[tool.ruff.lint]
ignore = ["E501", "E402", "E731"]

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']
