[metadata]
name = unity_sps_ogc_processes_api
version = 0.1
description = Example API Definition for OGC API - Processes
long_description = file: README.md
keywords = OpenAPI OGC API - Processes
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
