[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unity-sps-ogc-processes-api"
version = "2.0.0"
authors = [
    { name = "Drew Meyers", email = "drew.meyers@jpl.nasa.gov" },
]
description = "The Unity science processing service area's OGC Processes API."
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]

dependencies = [
    "requests==2.31.0",
    "fastapi==0.110.0",
    "pydantic==2.6.4",
    "SQLAlchemy==2.0.28",
    "pydantic-settings==2.0.0",
    "uvicorn==0.27.1",
    "psycopg2-binary==2.9.9",
    "redis==5.0.4",
    "apache-airflow-client @ git+https://github.com/apache/airflow-client-python.git@2.9.0"
]

[project.optional-dependencies]
test = [
    "pytest==8.0.2",
    "pytest-dependency==0.6.0",
    "httpx==0.23.0",
    "requests-mock==1.12.1",
    "pyfakefs==5.4.1",
    "fakeredis[lua]==2.23.1"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["unity_sps_ogc_processes_api*", "openapi_server*"]


[tool.black]
line-length = 88
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
skip = [
    '.eggs', '.git', '.hg', '.mypy_cache', '.nox', '.pants.d', '.tox',
    '.venv', '_build', 'buck-out', 'build', 'dist', 'node_modules', 'venv',
]
skip_gitignore = true
